--- a/zephyr/program/geralt/program.conf
+++ b/zephyr/program/geralt/program.conf
@@ -164,3 +164,7 @@ CONFIG_ADC_IT8XXX2_VOL_FULL_SCALE=y
 # Detachable
 CONFIG_PLATFORM_EC_DETACHABLE_BASE=y
 CONFIG_PLATFORM_EC_BASE_ATTACHED_SWITCH=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_I2C_TARGET=y
+CONFIG_I2C_TARGET_BUFFER_MODE=y
+CONFIG_I2C_TARGET_IT8XXX2_MAX_BUF_SIZE=2044
