geralt: enable uart
Change-Id: I068330a67bb3c5ffc9813ba6063fa649977c1841
Signed-off-by: Ting Shen <phoenixshen@google.com>

--- a/zephyr/program/geralt/i2c.dtsi
+++ b/zephyr/program/geralt/i2c.dtsi
@@ -143,4 +143,9 @@
 		     &i2c4_data_gpe7_default>;
 	pinctrl-names = "default";
 	prescale-scl-low = <1>;
+
+	target-enable;
+	hid_i2c_target: hid-i2c-target@56 {
+		reg = <0x56>;
+	};
 };
