--- a/zephyr/subsys/CMakeLists.txt
+++ b/zephyr/subsys/CMakeLists.txt
@@ -3,3 +3,4 @@
 add_subdirectory(ap_pwrseq)
 add_subdirectory(emul)
 add_subdirectory_ifdef(CONFIG_HOST_SERVICE host_service)
+add_subdirectory(usb_dc)
