WIP: roach: fw update
Change-Id: I2e92f5778cb12d7ff335d33ea9cfb6ae7ac7223f

--- a/zephyr/program/geralt/i2c.dtsi
+++ b/zephyr/program/geralt/i2c.dtsi
@@ -145,7 +145,7 @@
 	prescale-scl-low = <1>;
 
 	target-enable;
-	i2c5_target: target@56 {
+	hid_i2c_target: hid-i2c-target@56 {
 		reg = <0x56>;
 	};
 };
