--- a/zephyr/program/roach/program.conf
+++ b/zephyr/program/roach/program.conf
@@ -37,3 +37,9 @@ CONFIG_PLATFORM_EC_VBOOT_HASH=n
 # USB-C
 CONFIG_PLATFORM_EC_USB_PD_TBT_COMPAT_MODE=n
 CONFIG_PLATFORM_EC_USB_PD_USB4=n
+
+# Firmware update
+CONFIG_PLATFORM_EC_TOUCHPAD_HASH_FW=y
+CONFIG_PLATFORM_EC_TOUCHPAD_VIRTUAL_OFF=0x80000000
+CONFIG_PLATFORM_EC_TOUCHPAD_VIRTUAL_SIZE=57344
+CONFIG_PLATFORM_EC_UPDATE_PDU_SIZE=4096
