--- a/zephyr/program/roach/CMakeLists.txt
+++ b/zephyr/program/roach/CMakeLists.txt
@@ -8,6 +8,11 @@ find_package(Zephyr REQUIRED HINTS "${ZEPHYR_BASE}")
 
 zephyr_library_sources(
 		"src/fakes.c"
+		"src/one_wire.c"
+)
+
+zephyr_include_directories(
+		"include"
 )
 
 if(DEFINED CONFIG_BOARD_ROACH)
