--- a/zephyr/program/roach/CMakeLists.txt
+++ b/zephyr/program/roach/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(Zephyr REQUIRED HINTS "${ZEPHYR_BASE}")
 
 zephyr_library_sources(
 		"src/fakes.c"
+		"src/one_wire.c"
 )
 
 if(DEFINED CONFIG_BOARD_ROACH)
