--- a/zephyr/program/roach/gpio.dtsi
+++ b/zephyr/program/roach/gpio.dtsi
@@ -192,6 +192,11 @@
 	status = "okay";
 	current-speed = <460800>;
 	clock-frequency = <1804800>;
+
+	one_wire_uart: one-wire-uart {
+		compatible = "cros-ec,one-wire-uart";
+		id = <1>;
+	};
 };
 
 &ite_uart2_wrapper {
@@ -200,4 +205,3 @@
 		     &uart2_tx_gpf1_default>;
 	pinctrl-names = "default";
 };
-
