WIP: zephyr: one wire uart module
Change-Id: Id8e19a3fbd3f6c83361988243012ebe5c987f476

--- a/zephyr/drivers/Kconfig
+++ b/zephyr/drivers/Kconfig
@@ -4,6 +4,7 @@
 
 rsource "cros_flash/Kconfig"
 rsource "cros_kb_raw/Kconfig"
+rsource "cros_one_wire_uart/Kconfig"
 rsource "cros_rtc/Kconfig"
 rsource "cros_system/Kconfig"
 rsource "cros_shi/Kconfig"
