zephyr: one-wire uart driver
Driver for the communication protocol between geralt and roach.

BUG=b:269989432
TEST=twister

Change-Id: Id8e19a3fbd3f6c83361988243012ebe5c987f476

--- a/zephyr/drivers/Kconfig
+++ b/zephyr/drivers/Kconfig
@@ -7,3 +7,4 @@ rsource "cros_kb_raw/Kconfig"
 rsource "cros_rtc/Kconfig"
 rsource "cros_system/Kconfig"
 rsource "cros_shi/Kconfig"
+rsource "one_wire_uart/Kconfig"
