--- a/zephyr/drivers/CMakeLists.txt
+++ b/zephyr/drivers/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(cros_kblight)
 add_subdirectory(cros_rtc)
 add_subdirectory(cros_shi)
 add_subdirectory(cros_system)
+add_subdirectory(one_wire_uart)
