--- a/zephyr/Kconfig
+++ b/zephyr/Kconfig
@@ -79,6 +79,7 @@ rsource "Kconfig.test"
 rsource "Kconfig.timer"
 rsource "Kconfig.throttle_ap"
 rsource "Kconfig.touchpad"
+rsource "Kconfig.usb_update"
 rsource "Kconfig.usba"
 rsource "Kconfig.usbc"
 rsource "Kconfig.watchdog"
