zephyr: subsys: add usb_dc sub system
This commit implements usb hid keyboard and touchpad devices.

BUG=b:277525450
TEST=zmake build roach with the following configurations
     /* USB */
     CONFIG_USB_DEVICE_STACK=y
     CONFIG_USB_DEVICE_MANUFACTURER="Google LLC"
     CONFIG_USB_DEVICE_PRODUCT="Roach"
     CONFIG_USB_DEVICE_SN="0"
     CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=n
     CONFIG_USB_DEVICE_VID=0x18D1
     CONFIG_USB_DEVICE_PID=0x5999
     CONFIG_USB_DEVICE_REMOTE_WAKEUP=y
     /* USB HID */
     CONFIG_USB_DEVICE_HID=y
     CONFIG_USB_HID_BOOT_PROTOCOL=y
     CONFIG_HID_INTERRUPT_EP_MPS=64
     CONFIG_USB_HID_DEVICE_COUNT=2
     CONFIG_USB_DC_HID_KEYBOARD=y
     CONFIG_USB_DC_HID_TOUCHPAD=y
     CONFIG_USB_DC_HID_VIVALDI=y
     CONFIG_USB_DC_KEYBOARD_ASSISTANT_KEY=n
     CONFIG_USB_DC_KEYBOARD_TABLET_MODE_SWITCH=n
     CONFIG_USB_DC_KEYBOARD_NUM_TOP_ROW_KEYS=10
TEST=1. The keyboard and touchpad functions work.
     2. Remote wakeup mechanism is normal and
        keycodes aren't lost after the host resumes.
     3. The EC power consumption meet expectation.
        The current is arounnd 0.9mA when usb is suspended.
     4. The keyboard function works at boot stage.
     5. There is no error/warning message in ChromOS dmesg.

Change-Id: I9756341f0109d8f7fa4913c93a67120318938dcd

--- a/zephyr/dts/bindings/touchpad/elan,ekth3000.yaml
+++ b/zephyr/dts/bindings/touchpad/elan,ekth3000.yaml
@@ -13,3 +13,6 @@ properties:
     type: phandle
     required: true
     description: Interrupt from touchpad
+  max_pressure:
+    type: int
+    description: The max pressure for touchpad
