--- a/zephyr/program/roach/CMakeLists.txt
+++ b/zephyr/program/roach/CMakeLists.txt
@@ -7,6 +7,7 @@ cmake_minimum_required(VERSION 3.13.1)
 find_package(Zephyr REQUIRED HINTS "${ZEPHYR_BASE}")
 
 zephyr_library_sources(
+		"src/board.c"
 		"src/fakes.c"
 		"src/one_wire.c"
 		"${PLATFORM_EC}/common/update_fw.c"
