--- a/zephyr/program/roach/usb.dtsi
+++ b/zephyr/program/roach/usb.dtsi
@@ -3,13 +3,10 @@
  * found in the LICENSE file.
  */
 
-#include "usb_hid_touchpad.h"
-
-void keyboard_clear_buffer(void)
-{
-}
-
-void clear_typematic_key(void)
-{
-}
+&usb0 {
+	status = "okay";
+	pinctrl-0 = <&usb0_dm_gph5_default
+		     &usb0_dp_gph6_default>;
+	pinctrl-names = "default";
+};
 
