test commit for roach platform
Change-Id: I908d05ab8e6fb2508f80b1cdc3e5bd99556a0be9

--- a/zephyr/program/roach/program.conf
+++ b/zephyr/program/roach/program.conf
@@ -34,6 +34,33 @@ CONFIG_PLATFORM_EC_SWITCH=n
 CONFIG_PLATFORM_EC_VBOOT_EFS2=n
 CONFIG_PLATFORM_EC_VBOOT_HASH=n
 
+# LOG
+CONFIG_LOG=y
+CONFIG_USB_DEVICE_LOG_LEVEL_DBG=n
+CONFIG_LOG_BUFFER_SIZE=8192
+
+# USB
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_MANUFACTURER="Google LLC"
+CONFIG_USB_DEVICE_PRODUCT="Roach"
+CONFIG_USB_DEVICE_SN="0"
+CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=n
+CONFIG_USB_DEVICE_VID=0x18D1
+CONFIG_USB_DEVICE_PID=0x5999
+CONFIG_USB_DEVICE_REMOTE_WAKEUP=y
+
+# USB HID
+CONFIG_USB_DEVICE_HID=y
+CONFIG_USB_HID_BOOT_PROTOCOL=y
+CONFIG_HID_INTERRUPT_EP_MPS=64
+CONFIG_USB_HID_DEVICE_COUNT=2
+CONFIG_USB_DC_HID_KEYBOARD=y
+CONFIG_USB_DC_HID_TOUCHPAD=y
+CONFIG_USB_DC_HID_VIVALDI=y
+CONFIG_USB_DC_KEYBOARD_ASSISTANT_KEY=n
+CONFIG_USB_DC_KEYBOARD_TABLET_MODE_SWITCH=n
+CONFIG_USB_DC_KEYBOARD_NUM_TOP_ROW_KEYS=10
+
 # USB-C
 CONFIG_PLATFORM_EC_USB_PD_TBT_COMPAT_MODE=n
 CONFIG_PLATFORM_EC_USB_PD_USB4=n
