--- a/zephyr/program/roach/program.conf
+++ b/zephyr/program/roach/program.conf
@@ -59,6 +59,8 @@ CONFIG_USB_DC_HID_VIVALDI=y
 CONFIG_USB_DC_KEYBOARD_ASSISTANT_KEY=n
 CONFIG_USB_DC_KEYBOARD_TABLET_MODE_SWITCH=n
 CONFIG_USB_DC_KEYBOARD_NUM_TOP_ROW_KEYS=10
+CONFIG_USB_DC_KEYBOARD_HID_NUM=0
+CONFIG_USB_DC_TOUCHPAD_HID_NUM=1
 
 # USB-C
 CONFIG_PLATFORM_EC_USB_PD_TBT_COMPAT_MODE=n
